# (C) Copyright 2022 UCAR.
#
# This software is licensed under the terms of the Apache Licence Version 2.0
# which can be obtained at http://www.apache.org/licenses/LICENSE-2.0.

add_subdirectory( assimilation )
add_subdirectory( base )
add_subdirectory( contrib )
add_subdirectory( coupled )
add_subdirectory( generic )
add_subdirectory( interface )
add_subdirectory( mpi )
add_subdirectory( runs )
add_subdirectory( util )
